# soa

./: Cargo.toml  opencrx.txt  orange_hrm_get.txt  orange_hrm_post.txt
src/: get.rs  get_orange.rs  main.rs  post.rs  post_orange.rs
src/openCRX/: auth.rs  get.rs  get_json.rs  mod.rs
src/orangeHrm/: get.rs  post.rs
