[package]
name = "rest_api"
version = "0.1.0"
authors = ["Kai Bepperling <kai.bepperling@gmail.com>"]
edition = "2018"

[dependencies]
restson = "^0.5"
serde = "^1.0"
serde_derive = "^1.0"
serde-xml-rs = "^0.3.0"
serde_json = "1.0"
hyper = "0.12"
reqwest = "^0.9"
xmlJSON = "0.2.0"
rustc-serialize = "0.3"
